<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#121212"
    android:padding="30dp"
    android:gravity="center">

    <TextView
        android:text="@string/pokedex_menu_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#E3350D"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnEditProfile"
        android:text="@string/edit_profile_button_text"
        android:backgroundTint="#E3350D"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnTakePhoto"
        android:text="@string/take_photo_button_text"
        android:backgroundTint="#E3350D"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnLocationQuery"
        android:text="@string/location_query_button_text"
        android:backgroundTint="#E3350D"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>