<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/trainer_registration_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#E3350D"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="20dp"
            card_view:cardBackgroundColor="#1E1E1E"
            android:elevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="ExtraText">

                <EditText
                    android:id="@+id/etNombre"
                    android:hint="@string/name_hint"
                    android:textColorHint="#B0B0B0"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="yes"
                    android:autofillHints="name"
                    android:inputType="textPersonName" />


                <EditText
                    android:id="@+id/etFechaNacimiento"
                    android:hint="@string/dob_hint"
                    android:textColorHint="#B0B0B0"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="yes"
                    android:autofillHints="birthDate"
                    android:inputType="date"
                    tools:ignore="ExtraText" />

                <EditText
                    android:id="@+id/etPokemon"
                    android:hint="@string/favorite_pokemon_hint"
                    android:textColorHint="#B0B0B0"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAutofill="yes"
                    android:autofillHints="text"/>

                <Spinner
                    android:id="@+id/spRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/register_button_text"
            android:backgroundTint="#E3350D"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="14dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>